hphp/hack/test/typecheck/namespace_empty_identifier.php.exp
File "namespace_empty_identifier.php", line 4, characters 7-8:
Unbound name:  (a global function) (Naming[2049])
