hphp/hack/test/typecheck/namespace_empty_identifier.php
<?hh //strict

function test($x) {
  fun('');
  class_meth('', 'f');
}
